* think on Windows port (running in cygwin)
* replace deprecated ereg function - http://www.devthought.com/2009/06/09/fix-ereg-is-deprecated-errors-in-php-53/

changes from January 2008
-------------------------

Some changes are motivatied by error messages from logs. It may
hapen that the problem which caused an error works well after few 
days. 

year 2011
* Several minor changes, see the logs at https://bitbucket.org/robert.marik/maw/changesets.
* Caching results from integral assistant.
* Chinese translation, thanks to Minning Xiang.
* Since the forum at sourceforge.com if sull of spam, the Czech support is at matweb.cz
  (thanks to Jelena).

august 2010
* Method regula falsi

june 2010
* /usr/bin/timeout replaced by custom variable $mawtimeout to avoid
  conflict with another program /usr/bin/timeout from Debian distro

april 2010
* fixed bug
http://sourceforge.net/tracker/?func=detail&aid=2982092&group_id=221048&atid=1052162
* Catalan translation, thanks to Marti Ruiz-Altaba
* Changed repo into Mercurial, removed MAW releases and replaced by a script 
  which downloads the sources automatically and takes care about some more things.
* All po files in one directory now.
* Created mirror for sources at http://bitbucket.org/robert.marik/maw and
  http://bitbucket.org/robert.marik/maw-html. Primary repository is still
  sourceforge.net
* French translation, thanks to Marti Ruiz-Altaba again
* Autodetecting user's language
* Fixing inconsistency in notation when solving IVP for second order LDE 
  (non-mathematical bug)

february 2010
* Polish translation, thanks to Przemyslaw Dabek

october 2009 
* derivatives: test a#b replaced by fullratsimp(a-b)#0 --- fix for 
       sqrt(x**2+y**2)/y+y**4/4+x**2*y/2-y**3/2*sqrt((x/y)**2+1)+1/2*x*sqrt(x**2+y**2)
* graphs: strict policy which disallows to biuld more than one animation on
       the server at given time

july 2009
* autonomous systems: print eigenvalues when looking for stationary point