@@ -50,11 +50,11 @@ let us know if something does not work).
 href="http://www.vmware.com/download/player/">vmware</a> site.
 <li>Download MAW virtual machine from 
 <a href="http://user.mendelu.cz/marik/maw/download.php">here</a>
-(>800MB!).
+(>800MB!). 
 <li>Unpack the zip file in some directory, start VMware Player, open the MAW virtual machine in this
 VMvare Player and power on the MAW virtual machine.
 <li>The virtual machine is some minimal text only installation of
-Debian Lenny. After boot process you should see the login prompt. Login
+Debian Squeeze. After boot process you should see the login prompt. Login
 as <b>root</b> with password <b>mawroot</b>. 
 <li>Run <pre>ifconfig</pre> command to find  IP address of the virtual computer. Your use IP address for 
 eth0 interface (inetadr in the output of ifconfig command).
@@ -70,7 +70,7 @@ external programms, ....) let us know, please. Use our email adresses.
 Thank you very much.
 </ul>
 On a typical PC expect typically slower calculations than on our online server.
-
+If the computations are too slow, you may try to use virtual machine with <a href="http://user.mendelu.cz/marik/maw/download-old.php">older and faster software</a>.
 
 <hr>
 <a name="cz"></a>
@@ -98,7 +98,7 @@ href="http://www.vmware.com/download/player/">vmware</a>.
 počítač s MAWem</a> (>800MB!).
 <li>Rozzipujte někam archiv, spusťte VMware Player, otevřete v něm virtuální počítač MAW a 
 zapněte jej.
-<li>Ve virtuálním počítači je textová instalace Debianu Lenny. Po bootu uvidíte 
+<li>Ve virtuálním počítači je textová instalace Debianu Squeeze. Po bootu uvidíte 
 výzvu na přihlášení a vložení hesla. 
 Stačí se přihlásit při prvním spuštění. Nalogujte se jako 
 <b>root</b> s heslem <b>mawroot</b>. 
@@ -119,6 +119,7 @@ prosim na nase mailove adresy. Dekujeme.
 </ul>
 Na typickém studentském počítači (ne herním) očekávejte delší odezvu než na online 
 serveru (v době nízké zátěže).
+Pokud jsou výpočty příliš pomalé, můžete použít virtuální počítač se <a href="http://user.mendelu.cz/marik/maw/download-old.php">starší ale rychlejší verzí programu Maxima</a>.
  
 </body>
 
